--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,25 +16,22 @@ jobs:
         run: |
           sudo apt-get install aapt android-framework-res android-libaapt android-libandroidfw android-libbacktrace android-libbase android-libcutils android-liblog android-libunwind android-libutils android-libziparchive apktool junit libantlr-java libantlr3-runtime-java libapache-pom-java libatinject-jsr330-api-java libcommons-cli-java libcommons-io-java libcommons-lang3-java libcommons-parent-java libguava-java libjsr305-java libprotobuf-lite17 libsmali-java libstringtemplate-java libxmlunit-java libxpp3-java libyaml-snake-java -y
           sudo cp apk* /usr/local/bin/
-          sudo apt install ./megacmd.deb
-          mega-get https://mega.nz/file/gVAjmQiI#TcijYBY_qyhUymCbuz3QaKfKucLUSNn0GYay93DUMgA
-          mv ./libres.so ExaSource/lib/
-      
-      - name: Build Apk
-        run: apktool b ExaSource
 
-#      - name: Debug with SSH
-#        uses: iamSlightlyWind/ssh-server-action@v1
-#        with:
-#          ngrok-authtoken: "1uPm1SyJG3xrEcXvnXqQjFevx1O_5ExNcT6ibyJJrTGHZmtoA"
-#          ssh-public-key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPcdw+kXvwnBQQu1LR4whI233bzo6b+EHb/ZdV9eIqOe iamSlightlyWind@themajorones.dev"
+#      - name: Build Apk
+#        run: apktool b ExaSource
 
-      - name: Sign apk with dummy key
-        run: jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore dummy-key.keystore ExaSource/dist/wine7.apk dummy < dummykey
-
-
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.0.0
+      - name: Debug with SSH
+        uses: iamSlightlyWind/ssh-server-action@v1
         with:
-          name: ExaSource
-          path: ExaSource/dist/wine7.apk
+          ngrok-authtoken: "1uPm1SyJG3xrEcXvnXqQjFevx1O_5ExNcT6ibyJJrTGHZmtoA"
+          ssh-public-key: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIPcdw+kXvwnBQQu1LR4whI233bzo6b+EHb/ZdV9eIqOe iamSlightlyWind@themajorones.dev"
+
+#      - name: Sign apk with dummy key
+#        run: jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore dummy-key.keystore ExaSource/dist/wine7.apk dummy < dummykey
+
+
+#      - name: Upload a Build Artifact
+#        uses: actions/upload-artifact@v3.0.0
+#        with:
+#          name: ExaSource
+#          path: ExaSource/dist/wine7.apk
